<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainTextContainer" >
    <ScrollView
        android:layout_weight="1"
        android:layout_height="0dp"
        style="@style/ScrollView">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/encrypt_device_text"
                style="@style/MainText"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height"
        android:paddingTop="@dimen/row_padding_top">
        <Button
            android:id="@+id/cancel_button"
            android:layout_alignParentLeft="true"
            android:text="@string/encrypt_device_cancel"
            style="@style/LightButton"/>
        <Button
            android:id="@+id/accept_button"
            android:layout_alignParentRight="true"
            android:text="@string/encrypt_device_launch_settings"
            style="@style/ColoredButton" />
    </RelativeLayout>
</LinearLayout>
