<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_text_container"
    style="@style/MainTextContainer">
    <ScrollView
        android:layout_weight="1"
        android:layout_height="0dp"
        style="@style/ScrollView">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/company_controls_workspace"
                style="@style/MainText"/>
            <TextView
                android:text="@string/the_following_is_your_mdm"
                style="@style/MainText"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:paddingTop="@dimen/row_padding_top"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:id="@+id/mdm_icon_view"
                    android:layout_width="@dimen/icon_width_height"
                    android:layout_height="@dimen/icon_width_height"
                    android:scaleType="center"/>
                <TextView
                    android:id="@+id/device_manager_name"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="@dimen/main_text_padding_left_right"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/main_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height"
        android:paddingTop="@dimen/row_padding_top">
        <Button
            android:id="@+id/positive_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/set_up"
            style="@style/ColoredButton" />
    </RelativeLayout>
</LinearLayout>
